# Temporal-Events-Spiking

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
artifacts/: README.md
checkpoints/: README.md
configs/: mechanistic_audit_dvsgc_order2.yaml  phase1_dvsgc_chain4.yaml  phase1_dvsgc_order2.yaml  phase2_dvsgc_order2.yaml  smoke.yaml  temporal_audit_dvsgc_chain4.yaml  temporal_audit_dvsgc_order2.yaml
containers/: temporal_event_spiking.def
data/: README.md
docs/: PHASE2_MECHANISTIC_TEMPORAL_AUDIT_IMPLEMENTATION_BRIEF.md  datasets.md  experiment_protocol.md  mechanistic_temporal_audit.md  metrics.md  phase1_scope.md  repository_tree.md  research_directions.md  roadmap.md  smilies_setup.md  sources_and_design_notes.md  temporal_audit_scope.md  validation.md  vision.md
scripts/: prepare_dvsgc.sh  prepare_matched_dvsgc.sh  prepare_phase2.sh  run_mechanistic_audit.sh  run_phase1.sh  run_phase1_screen.sh  run_phase2_audit.sh  smoke_test.sh  train_audit_seed.sh  train_phase2_seed.sh  train_temporal_baseline.sh  train_temporal_baseline_screen.sh
src/etsr/: __init__.py  cli.py  config.py  reproducibility.py  runner.py
src/etsr/data/: __init__.py  common.py  dvsgc.py  factory.py  matched_dvsgc.py  perturbations.py  synthetic.py
src/etsr/evaluation/: causal.py  (+6 more)
tests/: test_energy.py  test_matched_dvsgc.py  test_mechanistic_audit.py  test_metrics.py  test_model_shapes.py  test_operations.py  test_perturbations.py  test_phase2_causal.py  test_phase2_dataset.py  test_phase2_input_audit.py  test_phase2_metrics.py  test_phase2_transformations.py
(+20 files in other folders)
