[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-event-spiking-research"
version = "0.1.0"
description = "Research scaffold for temporal audits in event-based Spiking Transformers"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy>=1.24,<2.0",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
etsr = "etsr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
